# rcd

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  Settings.toml  build.rs  dev_notes.md  dockerfile  implementation_notes.md  logging_config.yaml
rcd-admin/: Cargo.toml  index.html  index.scss
rcd-admin/src/: app.rs  instance.rs  lib.rs  log.rs  login.rs  main.rs  rcd.rs  request.rs  state.rs  token.rs
rcd-admin/src/components/: mod.rs  nav.rs  status.rs
rcd-admin/src/pages/: behaviors.rs  contracts.rs  coop_hosts.rs  databases.rs  home.rs  host_info.rs  hosts.rs  mod.rs  page_not_found.rs  participants.rs  sql.rs
rcd-client/: Cargo.toml
rcd-client-wasm/: Cargo.toml  build.rs  x.proto
rcd-client-wasm/src/: client.rs  lib.rs  log.rs  token.rs  x.rs
rcd-client/src/: Settings.toml  client_type.rs  error.rs  lib.rs
rcd-client/tests/: README.md  client_service_tests-auth.rs  client_service_tests-contract.rs  client_service_tests-logs-grpc.rs  client_service_tests-logs-http.rs  client_service_tests-logs.rs  client_service_tests.rs  db_service_tests-delete.rs  db_service_tests-insert.rs  db_service_tests-update.rs  db_service_tests.rs  participant_tests-admin.rs  participant_tests-delete.rs  participant_tests-update.rs  participant_tests.rs  query_tests.rs  rcd_tests.rs  test_harness.rs
rcd-client/tests/client_service_tests/: create_db_enable_coop_read_write.rs  create_db_enable_coop_read_write_grpc.rs  create_db_enable_coop_read_write_http.rs  create_user_database.rs  create_user_database_grpc.rs  create_user_database_http.rs  enable_cooperative_features.rs  enable_cooperative_features_grpc.rs  enable_cooperative_features_http.rs  generate_contract.rs  get_active_contract.rs  get_logs.rs  get_set_logical_storage_policy.rs  get_settings.rs  get_settings_http.rs  has_table.rs  has_table_grpc.rs  has_table_http.rs  host_only.rs  host_only_http.rs  is_online.rs  is_online_grpc.rs  is_online_http.rs
rcd-client/tests/client_service_tests-auth/: auth_for_token.rs  revoke_token.rs
rcd-client/tests/client_service_tests-contract/: generate_contract.rs  get_active_contract.rs
rcd-client/tests/client_service_tests-logs/: get_logs_last_entries.rs
rcd-client/tests/client_service_tests-logs-grpc/: get_logs_last_entries.rs
rcd-client/tests/client_service_tests-logs-http/: get_logs_last_entries.rs
rcd-client/tests/db_service_tests-delete/: mod.rs  (+1 more)
rcd-common/: Cargo.toml
rcd-common/src/: coop_database_contract.rs  coop_database_participant.rs  data_info.rs  db.rs  host_info.rs  lib.rs  rcd_enum.rs  rcd_settings.rs  save_contract_result.rs  table.rs  user.rs
rcd-enum/: Cargo.toml
rcd-enum/src/: column_type.rs  contract_status.rs  database_type.rs  deletes_from_host_behavior.rs  deletes_to_host_behavior.rs  dml_type.rs  host_status.rs  lib.rs  logical_storage_policy.rs  partial_data_result_action.rs  partial_data_status.rs  rcd_database_type.rs  rcd_db_error.rs  rcd_generate_contract_error.rs  remote_delete_behavior.rs  updates_from_host_behavior.rs  updates_to_host_behavior.rs
rcd-foo/: Cargo.toml  build.rs  rcdp.proto
rcd-foo/src/: main.rs  rcdp.rs
rcd-grpc/: Cargo.toml
rcd-grpc-client/: Cargo.toml
rcd-grpc-client/src/: Settings.toml  lib.rs
rcd-grpc-client/tests/: client_service_tests.rs  db_service_tests.rs  query_tests.rs  rcd_tests.rs  test_harness.rs
rcd-grpc/src/: data_srv.rs  lib.rs  remote_db_srv.rs  sqlclient_srv.rs
rcd-http/: Cargo.toml
rcd-http/notes/: design.md
rcd-http/src/: http_srv.rs  lib.rs
rcd-messages/: Cargo.toml
rcd-messages/src/: client.rs  formatter.rs  lib.rs
rcd-messages/tests/: markdown.rs
rcd-my-info/: Cargo.toml  index.html
rcd-my-info-core/: Cargo.toml
rcd-my-info-core/docs/: brainstorm.md
rcd-my-info-core/src/: account.rs  admin.rs  admin_db.rs  admin_db_sqlite.rs  container_error.rs  lib.rs  port_setup.rs  rcd_docker.rs
rcd-my-info-core/tests/: README.md  create_account.rs  create_account_and_container.rs  create_container.rs  docker_create_account_with_container.rs  docker_create_container.rs  docker_get_images.rs  docker_remove_container.rs  get_containers.rs  get_images.rs  remove_container.rs  test_harness.rs
rcd-my-info/notes/: design.md
rcd-my-info/src/: app.rs  con.rs  lib.rs  request.rs
rcd-proxy/: Cargo.toml  Settings.toml
rcd-proxy/src/: grpc_client.rs  lib.rs  main.rs  proxy_db.rs  proxy_db_sqlite.rs  proxy_grpc.rs  user_info.rs
rcd-proxy/tests/: get_host_info.rs  proxy_test_harness.rs
rcd-query/: Cargo.toml
rcd-query/src/: lib.rs  query_parser.rs
rcd-sqlite/: Cargo.toml
rcd-sqlite-log/: Cargo.toml
rcd-sqlite-log/src/: lib.rs  log_entry.rs  sql_text.rs
rcd-sqlite/src/: lib.rs  sqlite.rs
rcd-test-harness/: Cargo.toml
rcd-test-harness/src/: grpc.rs  http.rs  lib.rs
rcd-test-proxy/: Cargo.toml
rcd-test-proxy/src/: lib.rs
rcd-test-proxy/tests/: create_database.rs  register_acccount.rs  token.rs
rcdadmin/: Cargo.toml  index.html  rcd.css
rcdadmin/src/: behaviors.rs  conn.rs  contract.rs  db.rs  host.rs  main.rs  participant.rs  policy.rs  rcd.rs  rcd_conn_ui.rs  rcd_ui.rs  request.rs  sql.rs  state.rs  ui.rs  urls.rs
rcdproto/: Cargo.toml  build.rs
rcdproto/proto/: rcdp.proto  rcdp_proto3_optional.proto
rcdproto/src/: lib.rs  rcdp.rs
rcdt/: Cargo.toml
rcdx/: Cargo.toml  Settings.toml  log.sqlite-journal  logging_config.yaml  rocket.toml
rcdx-api/: Cargo.toml
rcdx-api/notes/: design.md
rcdx/src/: coop_database_contract.rs  coop_database_participant.rs  data_srv.rs  dbi.rs  defaults.rs  http_srv.rs  lib.rs  main.rs  query_parser.rs  rcd_db.rs  rcd_enum.rs  rcd_logging_layer.rs  rcd_service.rs  rcd_settings.rs  remote_db_srv.rs  sqlclient_srv.rs  table.rs
src/: dbi.rs  (+28 more)
tracking/: Cargo.toml  Settings.toml  Trunk.toml
tracking-api/: Cargo.toml
tracking-api/src/: Settings.toml  error.rs  main.rs  shark.rs
tracking-model/: Cargo.toml
tracking-model/src/: event.rs  lib.rs  user.rs
tracking/.cargo/: config.toml
tracking/src/: enter_event.rs  event.rs  event_props.rs  logging.rs  main.rs  repo.rs  settings.rs  storage.rs  view_events.rs
(+632 files in other folders)
