[workspace]
members = [
    # lib - this is for generating needed gRPC implementation
    "rcdproto",
    # binary - not implemented. a terminal client for interacting with an rcd instance
    "rcdt",
    # binary - not implemented. a cli utility
    "rcdcli",
    # in progress. this will be a web assembly admin tool for rcd in yew. 
    # makes http calls instead of grpc.
    "rcdadmin",
    # not implemented - an attempt to do rcd-admin, but in yew with functional components
    "rcd-admin",
    # lib - a thin business layer abstraction for rcd
    "rcd-core",
    # lib - all functionality for a sqlite db
    "rcd-sqlite",
    # lib - for all code common between 'rcd-core' and others
    "rcd-common",
    # lib - for all code related to query parsing
    "rcd-query",
    # binary - new test executable, throwaway for stuff
    "rcd-foo",
    # binary - combined http and grpc
    "rcdx",
    # lib - only for grpc implementation
    "rcd-grpc",
    # lib - only for http implementation
    "rcd-http",
    # lib - (may be deprecated) - pure rcd messages (same as `rcdproto`, but without dependency on `prost`)
    # used to try and interact with web assembly
    "rcd-messages",
    # library for http urls
    "rcd-http-common",
    # abstract client for http or grpc calls
    "rcd-client",
    # break out enum values
    "rcd-enum"
]