[workspace]
members = [
    # lib - this is for generating needed gRPC implementation
    "rcdproto",
    # binary - not implemented. a terminal client for interacting with an rcd instance
    "rcdt",
    # binary - not implemented. a cli utility
    "rcdcli",
    # a web based admin tool for rcd. written in yew with functional componets. uses http json for requests
    "rcd-admin",
    # lib - a thin business layer abstraction for rcd
    "rcd-core",
    # lib - all functionality for a sqlite db
    "rcd-sqlite",
    # lib - for all code common between 'rcd-core' and others
    "rcd-common",
    # lib - for all code related to query parsing
    "rcd-query",
    # binary - new test executable, throwaway for stuff
    "rcd-foo",
    # binary - combined http and grpc
    "rcdx",
    # lib - only for grpc implementation
    "rcd-grpc",
    # lib - only for http implementation
    "rcd-http",
    # lib - (may be deprecated) - pure rcd messages (same as `rcdproto`, but without dependency on `prost`)
    # used to try and interact with web assembly
    "rcd-messages",
    # library for http urls
    "rcd-http-common",
    # abstract client for http or grpc calls
    "rcd-client",
    # break out enum values
    "rcd-enum",
    # a small library to log to sql lite and console
    "rcd-sqlite-log", 
    # a breakout of formatting into markdown 
    "rcd-markdown",
    # a library of errors
    "rcd-error",
    # a client library for wasm projects (uses yew)
    "rcd-client-wasm", 
    # an example app that will use the wasm client 
    "tracking", 
    # core lib for managing containers: docker or k8s
    "rcd-my-info-core"
]