[package]
name = "rcd-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcd-messages = { path = "../rcd-messages" }
rcd-http-common = { path = "../rcd-http-common" }
yew = { version = "0.20", features = ["csr"] }
yew-router = { version= "0.17.0" }
gloo = "0.8"
strum = "0.24"
strum_macros = "0.24"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.83"
serde_json = "1"
wasm-bindgen-futures = "0.4"
reqwasm = "0.5"


[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
    "HtmlSelectElement",
    "console",
]

