[package]
name = "rcd-client-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcd-messages = { path = "../rcd-messages" }
rcd-http-common = { path = "../rcd-http-common" }
rcd-enum = { path = "../rcd-enum" }
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.83"
serde_json = "1"
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]