[package]
name = "rcd-client"
version = "0.1.0"
authors = ["dynamoRando <randyL04@hey.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcdproto = { path = "../rcdproto" }
rcd-core = { path = "../rcd-core" }
rcd-common = { path = "../rcd-common" }
rcd-enum = { path = "../rcd-enum" }
rcd-query = { path = "../rcd-query" }
rcdx = { path = "../rcdx" }
rcd-http-common = { path = "../rcd-http-common" }

tonic = "0.8.1"
tokio = { version = "1.18.0", features = ["full"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
serde = "1"
thiserror = "1.0.40"
stdext  = "0.3"
tracing = "0.1"

[build-dependencies]
tonic-build = "0.8.1"
