[package]
name = "rcd-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
chrono = "0.4"
sodiumoxide = "0.2.7"
guid-create = "0.3.0"
substring = "1.4.5"
rcdproto = { path = "../rcdproto" }
rcd-enum = { path = "../rcd-enum" }
