[package]
name = "rcd-foo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcd-sqlite-log = { path = "../rcd-sqlite-log" }
rcd-proxy-container = { path = "../rcd-proxy-container" }
log = "0.4"
tokio = { version = "1.18.0", features = ["full"] }