[package]
name = "rcd-foo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic-web-wasm-client = "0.3"
prost = "0.11.5"
tonic = { version = "0.8.3", default-features = false, features = [
    "prost",
    "codegen",
] }
tokio = { version = "1", features = ["full"] }
log = "0.4.17"
simple_logger = "4.0.0"

[build-dependencies]
tonic-build = { version = "0.8.4", default-features = false, features = [
    "prost",
] }

