[package]
name = "rcd-grpc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

rcdproto = { path = "../rcdproto" }
rcdx = { path = "../rcdx" }
rcd-core = { path = "../rcd-core" }
rcd-common = { path = "../rcd-common" }
config = "0.13.1"
tonic = "0.8.1"
tonic-reflection = "0.5.0"