[package]
name = "rcd-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcdproto = { path = "../rcdproto" }
rcd-core = { path = "../rcd-core" }
rusqlite = { version = "0.28.0", features = ["column_decltype", "bundled", "bundled-sqlcipher"] }
tonic = "0.8.1"
tonic-reflection = "0.6.0"
tokio = { version = "1.18.0", features = ["full"] }
log = "0.4"