[package]
name = "rcd-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcdproto = { path = "../rcdproto" }
rcd-core = { path = "../rcd-core" }
rcd-common = { path = "../rcd-common" }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
reqwest = { version = "0.11", features = ["blocking"] }
log = "0.4"
tokio = { version = "1.18.0", features = ["full"] }
lazy_static = "1.4.0"
uuid = { version = "1.2.2", features = ["v4"] }

