[package]
name = "rcd-messages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde_derive = "1"
serde = { version = "1.0", features = ["derive"] }
indexmap = "1.9.1"
rcd-markdown = { path = "../rcd-markdown" }
tracing = "0.1"
num_enum = "0.5.11"
