[package]
name = "rcd-my-info-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docker-api = "0.12"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
rusqlite = { version = "0.28.0", features = ["column_decltype", "bundled", "bundled-sqlcipher"] }
rcd-common = { path = "../rcd-common" }
rcd-sqlite = { path = "../rcd-sqlite" }
log = "0.4"
simple_logger = "4"
thiserror = "1"
futures = { version = "0.3", features = ["executor"] }