[package]
name = "rcd-my-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcd-messages = { path = "../rcd-messages" }
rcd-http-common = { path = "../rcd-http-common" }
rcd-enum = { path = "../rcd-enum" }
rcd-client-wasm = { path = "../rcd-client-wasm" }
yew = { version = "0.20", features = ["csr"] }
gloo = "0.8"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.83"
serde_json = "1"
wasm-bindgen-futures = "0.4"
yew-router = "0.17"
js-sys = "0.3"
futures-util = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
    "HtmlSelectElement",
    "console",
]

