[package]
name = "rcd-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcd-enum = { path = "../rcd-enum" }
rcd-grpc = { path = "../rcd-grpc" }
rcd-http = { path = "../rcd-http" }
rcdproto = { path = "../rcdproto" }
rcd-core = { path = "../rcd-core" }
rcd-common = { path = "../rcd-common"}
rcd-test-harness = { path = "../rcd-test-harness"}
serde_json = "1"
serde = "1"
serde_derive = "1"
thiserror = "1.0.38"
log = "0.4.17"
config = "0.13.3"
simple_logger = "4.0.0"
tonic = "0.8.3"
rusqlite = { version = "0.28.0", features = ["column_decltype", "bundled", "bundled-sqlcipher"] }
ignore-result = "0.2.0"
