[package]
name = "rcd-proxy"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcd-enum = { path = "../rcd-enum" }
rcd-grpc = { path = "../rcd-grpc" }
rcd-http = { path = "../rcd-http" }
rcdproto = { path = "../rcdproto" }
rcd-core = { path = "../rcd-core" }
rcd-common = { path = "../rcd-common"}
rcd-test-harness-common = { path = "../rcd-test-harness-common"}
rcd-messages = { path = "../rcd-messages"}
rcd-client = { path = "../rcd-client"}
rcdx = { path = "../rcdx" }
serde_json = "1"
serde = "1"
serde_derive = "1"
thiserror = "1.0.38"
log = "0.4.17"
config = "0.13.3"
simple_logger = "4.0.0"
tonic = "0.8.3"
rusqlite = { version = "0.28.0", features = ["column_decltype", "bundled", "bundled-sqlcipher"] }
ignore-result = "0.2.0"
uuid = { version = "1.3.0", features = ["v4"] }
tonic-reflection = "0.6.0"
tokio = { version = "1", features = ["full"] }
triggered = "0.1.2"
chrono = "0.4.24"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
fern = { version =  "0.6.1", features = ["colored"] }
ignore = "0.4.20"
