[package]
name = "rcd-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcd-common = { path = "../rcd-common" }
rcd-enum = { path = "../rcd-enum" }
serde = "1"
serde_derive = "1"
tonic = "0.8.1"
tokio = { version = "1.18.0", features = ["full"] }
prost = "0.11.0"
chrono = "0.4"
sodiumoxide = "0.2.7"
lazy_static = "1.4.0"
conv = "0.3.3"
guid-create = "0.2.0"
substring = "1.4.5"
antlr-rust = "0.3.0-beta"
log = "0.4"
