[package]
name = "rcd-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcd-enum = { path = "../rcd-enum" }
serde = "1"
serde_derive = "1"
lazy_static = "1.4.0"
substring = "1.4.5"
antlr-rust = "0.3.0-beta"
tracing = "0.1"
