[package]
name = "rcd-sqlite-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.*", features = ["std"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
chrono = "0.4"
serde = "1"
serde_derive = "1"
rcd-markdown = { path = "../rcd-markdown" }
indexmap = "1.9.1"