[package]
name = "rcd-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcdproto = { path = "../rcdproto" }
rcd-common = { path = "../rcd-common" }
rcd-query = { path = "../rcd-query" }
rcd-enum = { path = "../rcd-enum" }
rcd-error = { path = "../rcd-error" }
rcd-sqlite-log = { path = "../rcd-sqlite-log" }
serde = "1"
serde_derive = "1"
rusqlite = { version = "0.28.0", features = ["column_decltype", "bundled", "bundled-sqlcipher"] }
tonic = "0.8.1"
tokio = { version = "1.18.0", features = ["full"] }
prost = "0.11.0"
chrono = "0.4"
sodiumoxide = "0.2.7"
lazy_static = "1.4.0"
conv = "0.3.3"
guid-create = "0.3.0"
substring = "1.4.5"
antlr-rust = "0.3.0-beta"
log = "0.4"
thiserror = "1"
stdext = "0.3"