[package]
name = "rcd-test-harness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcdproto = { path = "../rcdproto" }
rcd-core = { path = "../rcd-core" }
rcd-common = { path = "../rcd-common" }
rcd-enum = { path = "../rcd-enum" }
rcd-query = { path = "../rcd-query" }
rcdx = { path = "../rcdx" }
rcd-proxy = { path = "../rcd-proxy" }
rcd-http-common = { path = "../rcd-http-common" }
rcd-test-harness-common = { path = "../rcd-test-harness-common" }
rcd-client = { path = "../rcd-client" }
tonic = "0.8.1"
tokio = { version = "1.18.0", features = ["full"] }
futures = { version = "0.3.*" }
tracing = "0.1"
lazy_static = "1.4.0"
triggered = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
serde = "1"
simple_logger = "4"
fern = { version =  "0.6.1", features = ["colored"] }
chrono = "0.4.24"
ignore = "0.4.20"
ignore-result = "0.2.0"
log = "0.4"

[build-dependencies]
tonic-build = "0.8.0"
