[package]
name = "rcd-test-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcd-test-harness = { path = "../rcd-test-harness" }
rcd-proxy = { path = "../rcd-proxy" }
rcd-messages = { path = "../rcd-messages" }
tokio = { version = "1.18.0", features = ["full"] }
log = "0.4.17"
simple_logger = "4"
ignore-result = "0.2.0"
fern = "0.6.1"
chrono = "0.4.24"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
serde = "1"
