[package]
name = "rcdadmin"
authors = ["dynamoRando <randyL04@hey.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rcdproto = { path = "../rcdproto" }
yew = "0.19"
gloo = "0.8"
strum = "0.24"
strum_macros = "0.24"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
    "console"
]

