[package]
name = "rcdproto"
version = "0.1.0"
authors = ["dynamoRando <randyL04@hey.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.1"
prost = "0.11.0"
serde = "1"

[build-dependencies]
tonic-build = "0.8.0"
prost-build = { version = "0.11.0" }