[package]
name = "rcdt"
version = "0.1.0"
authors = ["dynamoRando <randyL04@hey.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcdproto = { path = "../rcdproto" }
rcd-client = { path = "../rcd-client" }
rcd-grpc = { path = "../rcd-grpc" }