[package]
name = "rcdx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcdproto = { path = "../rcdproto" }
config = "0.13.1"
rusqlite = { version = "0.28.0", features = ["column_decltype", "bundled", "bundled-sqlcipher"] }
tonic = "0.8.1"
tonic-reflection = "0.5.0"
tokio = { version = "1.18.0", features = ["full"] }
prost = "0.11.0"
prost-types = "0.11.0"
chrono = "0.4"
futures = { version = "0.3.*" }
sodiumoxide = "0.2.7"
log = "0.4.17"
env_logger = "0.9.0"
lazy_static = "1.4.0"
conv = "0.3.3"
guid-create = "0.2.0"
substring = "1.4.5"
endianness = "0.2.0"
antlr-rust = "0.3.0-beta"

[build-dependencies]
tonic-build = "0.8.0"