[package]
name = "tracking-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1"
serde_json = "1"
rcd-messages = { path = "../rcd-messages" }
rcd-client = { path = "../rcd-client" }
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
chrono = "0.4.24"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
log = "0.4.17"
fern = { version =  "0.6.1", features = ["colored"] }
serde = "1.0.159"
tokio = { version = "1", features = ["full"] }
ignore-result = "0.2.0"

