[package]
name = "tracking-api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1"
serde_json = "1"
rcd-messages = { path = "../rcd-messages" }
rcd-client = { path = "../rcd-client" }
tracking-model = { path = "../tracking-model" }
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
chrono = "0.4.24"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
tracing = "0.1"
fern = { version =  "0.6.1", features = ["colored"] }
serde = "1.0.159"
tokio = { version = "1", features = ["full"] }
ignore-result = "0.2.0"
thiserror = "1.0.40"
jwt = "0.16"
hmac = "0.12"
sha2 = "0.10"
config = "0.13.1"
lazy_static = "1.4.0"
log = "0.4"
tracing-subscriber = "0.3"
stdext = "0.3"
uuid = { version = "1.3.0", features = ["v4"] }