[package]
name = "tracking-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.159"
serde_derive = "1"
serde_json = "1"
chrono = "0.4.24"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
rcd-messages = { path = "../rcd-messages" }