[package]
name = "tracking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
gloo = "0.8"
js-sys = "0.3"
regex = "1"
config = "0.13.1"
chrono = "0.4.24"
rcd-messages = { path = "../rcd-messages" }
tracking-model = { path = "../tracking-model" }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
yew-router = "0.17"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
    "HtmlSelectElement",
    "console",
]

